# New-Grad-Jobs

./: CHANGELOG.md  pyproject.toml
.github/workflows/: bot-pr-protected-files.yml  pipeline-integrity.yml
docs/: feed.xml  health.json  jobs.json  market-history.json  predictions-status.json  predictions.json
scripts/: generate_predictions.py  update_jobs.py
tests/: test_categorize.py  test_filter.py  test_readme_contract.py  test_signal_detection.py  test_utils.py
